Support bot play request from client by POST to /bots endpoint
